2008-10-16  Claude Paroz  <claude@2xlibre.net>

	* gnome-modules.xml.in:
	* releases.xml.in: orca branched for 2.24.

2008-10-15  Claude Paroz  <claude@2xlibre.net>

	* templates/language-release.tmpl: Include the mdash in the translatable
	string.
	Fixes #541683.

2008-10-15  Claude Paroz  <claude@2xlibre.net>

	* people.xml.in:
	* translation-teams.xml.in: New Latin translation team.

2008-10-14  Claude Paroz  <claude@2xlibre.net>

	* gnome-modules.xml.in:
	* releases.xml.in: eog, vinagre and gdm branched for 2.24.

2008-10-09  Claude Paroz  <claude@2xlibre.net>

	* gnome-modules.xml.in:
	* releases.xml.in: accerciser branched for 2.24, new stable branch for
	gimp (gimp-2-6).

2008-10-08  Claude Paroz  <claude@2xlibre.net>

	* gnome-modules.xml.in:
	* releases.xml.in: evolution-brainread removed (obsolete).

2008-10-06  Christian Rose  <menthos@gnome.org>

	* people.xml.in: Doh, make the corresponding change here as well!

2008-10-06  Christian Rose  <menthos@gnome.org>

	* translation-teams.xml.in: Cleaned up coordinator id information
	for a lot of teams, including br, eo, io, lv, tl, tk, and ug.

2008-10-06  Christian Rose  <menthos@gnome.org>

	* translation-teams.xml.in: Updated web page for Swedish team.

2008-10-06  Gil Forcada  <gforcada@gnome.org>

	* gnome-modules.xml.in: Removed gimp-2-4 branch.

2008-10-04  Claude Paroz  <claude@2xlibre.net>

	* gnome-modules.xml.in: obsolete bug-buddy docs has been removed from SVN.

2008-10-02  Johannes Schmid  <jhs@gnome.org>

	* gnome-modules.xml.in:
	* releases.xml.in:
	gdl and gnome-build branched for GNOME 2.24

2008-10-01  Gil Forcada  <gforcada@gnome.org>

	* gnome-modules.xml.in:
	* releases.xml.in: nautilus and eel branched for GNOME 2.24.

2008-09-29  Claude Paroz  <claude@2xlibre.net>

	* gnome-modules.xml.in:
	* releases.xml.in: gcalctool branched for GNOME 2.24.

2008-09-27  Goran Rakić  <grakic@devbase.net>

	* update-stats.py: Use hidden teams for doc stats too (bug #553695).
