@@ -217,6 +217,11 @@
     <branch id="HEAD"/>
   </module>
 
+  <module id="contacts">
+    <maintainer id="chrisl"/>
+    <branch id="HEAD"/>
+  </module>
+
   <module id="criawips">
     <maintainer id="herzi"/>
     <defaults>
@@ -276,6 +281,11 @@
   </module>
 
   <module id="deskscribe">
+    <branch id="HEAD"/>
+  </module>
+
+  <module id="dates">
+    <maintainer id="chrisl"/>
     <branch id="HEAD"/>
   </module>
 
@@ -1987,6 +1997,11 @@
   <module id="swfdec-gnome">
      <maintainer id="otte"/>
      <branch id="HEAD" stringfrozen="true"/>
+  </module>
+
+  <module id="tasks">
+    <maintainer id="chrisl"/>
+    <branch="HEAD"/>
   </module>
 
   <module id="tomboy">
