@@ -27,6 +27,13 @@
     <nick>chpe</nick>
     <webpage>http://gnome.org/~chpe/</webpage>
   </person>
+  <person id="chrisl">
+    <name>Chris Lord</name>
+    <email>chris@o-hand.com</email>
+    <webpage>http://chrislord.net/blog</webpage>
+    <icon>http://planet.gnome.org/heads/cwiiis3.png</icon>
+    <nick>chrisl</nick>
+  </person>
   <person id="davyd">
     <name>Davyd Madeley</name>
     <email>davyd@madeley.id.au</email>
