@@ -133,12 +133,14 @@
     <module id="bookmark-applet"/>
     <module id="brasero"/>
     <module id="byzanz"/>
+    <module id="contacts"/>
     <module id="chronojump"/>
     <module id="conduit"/>
     <module id="conglomerate"/>
     <module id="contact-lookup-applet"/>
     <module id="criawips"/>
     <module id="cupid"/>
+    <module id="dates"/>
     <module id="deskscribe"/>
     <module id="diary"/>
     <module id="divifund"/>
@@ -259,6 +261,7 @@
     <module id="silky"/>
     <!-- dead? <module id="sodipodi"/> -->
     <module id="straw"/>
+    <module id="tasks"/>
     <module id="tracker"/>
     <module id="xchat-gnome"/>
     <module id="xdg-user-dirs-gtk"/>
