@@ -1,3 +1,10 @@
+2008-10-18  Gil Forcada  <gforcada@gnome.org>
+
+	* gnome-modules.xml.in:
+	* releases.xml.in:
+	* people.xml.in:
+	Added Contacts, Tasks and Dates to gnome-extras and added Chris Lord in people.xml.in.
+
 2008-10-16  Claude Paroz  <claude@2xlibre.net>
 
 	* gnome-modules.xml.in:
